// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkersPage filters out workers from diferent domains 1`] = `
<section
  className="workers-page "
>
  <WorkerList
    canDebugWorkers={true}
    client={Object {}}
    workers={
      Array [
        Object {
          "active": true,
          "name": "worker1",
          "registrationFront": "",
          "scope": "SCOPE 123",
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
        Object {
          "active": false,
          "name": "worker2",
          "registrationFront": "",
          "scope": "SCOPE 456",
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
      ]
    }
  />
</section>
`;

exports[`WorkersPage filters out workers from different domains and renders an empty list if there is none left 1`] = `
<section
  className="workers-page workers-page--empty"
>
  <WorkerListEmpty
    serviceContainer={Object {}}
  />
</section>
`;

exports[`WorkersPage renders the expected snapshot for a WorkerPage with empty worker list 1`] = `
<section
  className="workers-page workers-page--empty"
>
  <WorkerListEmpty
    serviceContainer={Object {}}
  />
</section>
`;

exports[`WorkersPage renders the expected snapshot for an App with multiple workers list 1`] = `
<section
  className="workers-page "
>
  <WorkerList
    canDebugWorkers={true}
    client={Object {}}
    workers={
      Array [
        Object {
          "active": true,
          "name": "worker1",
          "registrationFront": "",
          "scope": "SCOPE 123",
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
        Object {
          "active": false,
          "name": "worker2",
          "registrationFront": "",
          "scope": "SCOPE 456",
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
        Object {
          "active": true,
          "name": "worker3",
          "registrationFront": "",
          "scope": "SCOPE 789",
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
      ]
    }
  />
</section>
`;

exports[`WorkersPage renders the expected snapshot for an App with single worker list 1`] = `
<section
  className="workers-page "
>
  <WorkerList
    canDebugWorkers={true}
    client={Object {}}
    workers={
      Array [
        Object {
          "active": true,
          "name": "worker1",
          "registrationFront": "",
          "scope": "SCOPE 123",
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
      ]
    }
  />
</section>
`;
